# CMakeLab

lool/: CMakeLists.txt  ConsoleApplication2.cpp  t.cpp.in
lool/common/: aa.cpp  aa.h
